--- a/TucanchayaV1/TucanchayaV1.Android/TucanchayaV1.Android.csproj
+++ b/TucanchayaV1/TucanchayaV1.Android/TucanchayaV1.Android.csproj
@@ -99,7 +99,10 @@
     <AndroidResource Include="Resources\drawable\logo_opt.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\Cancha.png" />
+    <AndroidResource Include="Resources\drawable\cancha.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\stars.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
