--- a/TucanchayaV1/TucanchayaV1/TucanchayaV1.csproj
+++ b/TucanchayaV1/TucanchayaV1/TucanchayaV1.csproj
@@ -9,10 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Canchas.xaml">
+    <EmbeddedResource Update="View\Canchas.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Menu.xaml">
+    <EmbeddedResource Update="View\Menu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\Puntos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
