--- a/TucanchayaV1/TucanchayaV1.Android/TucanchayaV1.Android.csproj
+++ b/TucanchayaV1/TucanchayaV1.Android/TucanchayaV1.Android.csproj
@@ -104,5 +104,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\stars.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_check_circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_stars.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_assignment.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
